@@ -33,6 +33,7 @@ def count_xor(a: bitarray, b: bitarray) -> int: ...
 def any_and(a: bitarray, b: bitarray) -> bool: ...
 def subset(a: bitarray, b: bitarray) -> bool: ...
 def correspond_all(a: bitarray, b: bitarray) -> tuple: ...
+def byteswap(a: BytesLike, n: int) -> None: ...
 
 def intervals(a: bitarray) -> Iterator: ...
 
