@@ -1,9 +1,10 @@
 2025-05-XX   3.4.0:
 -------------------
+  * add `util.byteswap()`
   * add `util.correspond_all()`
   * drop Python 3.5 support
+  * fix `.reverse()` for imported buffer
   * remove adjust_indices() from header
-  * fix `.reverse()` on imported buffer
   * add tests
 
 
